animate css no longer functional on small screens

--- a/css/style.css
+++ b/css/style.css
@@ -93,6 +93,11 @@ img{
 	padding: 30px;
 }
 
+#a100Emblem, #nccEmblem{
+        position:relative;
+        top:-20px;
+}
+
 #myName{
 	font-size: 4em;
 	animation-delay: .5s;
